# bpm-log

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  MCD.dbdiagram  MCD.dbml  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.worktree.yml  docker-compose.yml  index.html
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_allocation_quantites.py  0003_equipment_photo.py  0004_parc_v2.py  0005_pannes_v2.py  0006_contenants.py  0007_flights.py  0008_prestation_dates_day.py  0009_prestation_ebauche.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  seed.py
backend/app/models/: __init__.py  db_models.py  enums.py
backend/app/routers/: __init__.py  auth.py  dashboard.py  equipment.py  fournisseurs.py  inventory.py  membres.py  notifications.py  prestations.py  sync.py  tickets.py  webauthn.py
backend/app/schemas/: auth.py  dashboard.py  equipment.py  inventory.py  movement.py  notification.py  prestation.py  sync.py  ticket.py  webauthn.py
backend/app/security/: __init__.py  jwt.py  passwords.py  rbac.py
backend/app/services/: __init__.py  push.py  scheduler.py
backend/tests/: conftest.py  test_contenants.py  test_flights.py  test_presta_contenu.py  test_presta_dates.py  test_presta_location.py  test_smoke.py  test_sync_deplacement.py
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  (+4 more)
(+66 files in other folders)
